tdf#142351 chart ooxml import: fix category axis cross position

Set PROP_CrossoverPosition value regardless of the mrModel.mbAuto
value, which is a different thing. This element specifies that
this axis is a date or text axis based on the data that is used for
the axis labels, not a specific choice.

Change-Id: Ifa291aac2f4bb3981d968de3489b23f1af485104