oox/source/drawingml/chart/axisconverter.cxx
@@ -372,8 +372,8 @@ void AxisConverter::convertFromModel(const Reference<XCoordinateSystem>& rxCoord
             case XML_max:       eAxisPos = cssc::ChartAxisPosition_END;     break;
             case XML_autoZero:  eAxisPos = cssc::ChartAxisPosition_ZERO;   break;
         }
-        if( !mrModel.mbAuto )
-            aAxisProp.setProperty( PROP_CrossoverPosition, eAxisPos );
+
+        aAxisProp.setProperty( PROP_CrossoverPosition, eAxisPos );
 
         // calculate automatic origin depending on scaling mode of crossing axis
         bool bCrossingLogScale = pCrossingAxis && lclIsLogarithmicScale( *pCrossingAxis );
